# mindmap-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  check_data.py  check_node_properties.py  debug_connections.py  pyproject.toml  run_ingest.py  run_query.py
.claude/: settings.local.json
.cursor/rules/: mindmap-ai.mdc
.cursor/skills/my-custom-rule/: SKILL.md
backend/: .env.production.example
backend/app/: main.py
backend/app/api/: chat.py  endpoints.py  extract.py  graph.py  ingest.py  query.py  router.py
backend/app/core/: db.py
backend/app/domain/: identity.py
backend/app/legacy/: README.md
backend/app/schemas/: __init__.py  citation.py  document_structure.py  entities.py  extraction.py  graph_response.py  node_detail.py  passage.py  (+2 more)
backend/tests/: conftest.py
backend/tools/: measure_baseline.py  run_semantic_eval.py  seed_smoke_graph.py
docs/: architecture.md  compatibility_delete_list_sprint20.md  demo_path.md  extraction_contract.md  frontend_audit.md  graph_contract.md  graph_storage_model.md  launch_checklist.md  legacy_audit.md  manual_acceptance_checklist.md  ontology_v1.md  performance_baseline.md  product_readiness_review.md  sprint23_phase1_acceptance_pack.md  status.md  system_overview.md  test_results.md  workflow.md
docs/deprecated/: graph_schema.md  project_charter.md
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: dev-check.ps1  dev-up.ps1
tools/legacy/: README.md  run_ingest.py  run_query.py
(+98 files in other folders)
